# theseus

./: CMakeLists.txt  makefile  theseus.sublime-project  theseus.sublime-workspace
app/: CMakeLists.txt
app/src/: main.cpp  prover.cpp
cop/: CMakeLists.txt
cop/include/cop/: cop.hpp  normalizer.hpp  persistent_list.hpp
cop/src/: CMakeLists.txt  cop.cpp  normalizer.cpp
cop/test/: CMakeLists.txt  testgtest.cpp
core/: CMakeLists.txt
core/include/core/: formula.hpp  formula.hpp2  identifier.hpp  literal.hpp  printer.hpp  term.hpp  transform.hpp  utils.hpp  visitor.hpp
core/src/: formula.cpp  identifier.cpp  literal.cpp  printer.cpp  term.cpp
core/test/: CMakeLists.txt  testgtest.cpp
src/: prover.cpp
src/core/: formula.hpp
src/tptp/: driver.cpp  driver.hpp  location.hh  makefile  parser.cxx  parser.hxx  parser.ypp  position.hh  scanner.cxx  scanner.hpp  scanner.hxx  scanner.lpp  stack.hh
tptp/: CMakeLists.txt
tptp/include/tptp/: definition.hpp  problem.hpp  scanner.hpp
tptp/src/: CMakeLists.txt  parser.ypp  problem.cpp  scanner.lpp
tptp/test/: CMakeLists.txt  COM003+1.p  CSR031+1.p  testgtest.cpp
tptp/test/input/: BOO109+1.p
unify/: CMakeLists.txt
unify/include/unify/: unify.hpp
unify/src/: CMakeLists.txt  unify.cpp
unify/test/: CMakeLists.txt  testgtest.cpp
